Canvas components/Archive/v3.0.0/PACo_SearchBox_A.md
# PACo_SearchBox_A

This documentation page is related to version: 3.0.0 and later

Related video page: https://www.formsandflows.nl/paco/videos/paco_searchbox_a/

![image](https://github.com/formsandflows/PACo/assets/35654198/98e938bd-45cc-44f2-abdc-7ffcc0ca5aa0)

## Custom properties

| Display name | Property type | Property definition | Data type | Description | Memo
| :--- | :--- | :--- | :--- | :--- | :--- |
| cmp_HintText | Data | Input | Text | The hint text. | |
| cmp_Text | Data | Output | Text | Contains the text typed into the search box. | |
| cmp_TextStyling | Data | Input | Record | Text properties. | See the documention about cmp_TextStyling below. |
| cmp_Theme | Data | Input | Record | The theme. | See the documention on theming. |
| cmp_Visualization | Data | Input | Text | The visualization. | See the documention of PACo canvas component PACo_Visualization_A. |
| cmp_VisualizationColor | Data | Input | Text | The color of the visualization. | |

### cmp_TextStyling
This custom property has the following properties:

| Property | Description |
| :--- | :--- |
| Align | The horizontal alignment. |
| Color | The color. |
| Font | The font. |
| FontSize | The font size. |
| FontWeight | The font weight. |
| Padding | The padding. |
